refactor(ui): clean up warnings in fxui module
Needed for a cleaner project

Co-authored-by: Isa Marie Wisth <isamw@stud.ntnu.no>

#136